<resources>
    <string name="app_name">T先生</string>
    <string name="hello_world">施工中!</string>
    <string name="action_settings">设置</string>
    <string name="title_activity_notification">通知管理</string>
    <string name="title_activity_process_management">进程管理</string>
    <string name="title_activity_memory">内存管理</string>
    <string name="title_activity_app">App管理</string>
    <string name="title_activity_authority">权限管理</string>
    <string name="title_activity_self_start">自启动管理</string>
    <string name="title_activity_traffic">流量控制</string>
    <string name="title_activity_disk">磁盘管理</string>
    <string name="title_activity_no_spam">骚扰拦截</string>
    <string name="title_activity_net_control">联网控制</string>
    <string name="title_activity_battery">电池管理</string>

    <string name="t_about">关于我们</string>
    <string name="t_feedback">问题反馈</string>
    <string name="t_update">检查更新</string>

    //disk
    <string name="disk_space_used_title">已用:</string>
    <string name="disk_space_store">存储空间</string>
    <string name="disk_space_system">系统空间</string>
    <string name="disk_space_store_tip1">除上述内容外,存储空间还包含手机操作系统等数据</string>
    <string name="disk_space_store_title_1">安装包</string>
    <string name="disk_space_store_title_2">我的相册</string>
    <string name="disk_space_store_title_3">我的音乐</string>
    <string name="disk_space_store_package_title_1">已安装</string>
    <string name="disk_space_store_package_title_2">未安装</string>
    <string name="disk_space_store_package_title_3">安装包</string>
    <string name="disk_space_system_title_1">卸载软件</string>

    <string name="disk_space_system_tip1">包含操作,应用软件以及使用软件产生的缓存数据</string>
    <string name="disk_space_system_tip2">可通过以下方式释放空间:</string>
    <string name="title_activity_disk_packages">安装包</string>
    <string name="title_activity_disk_album">我的相册</string>
    <string name="title_activity_disk_audio">我的音乐</string>

    <string name="disk_uninstalled_user_sw">用户软件</string>
    <string name="disk_uninstalled_sys_sw">系统软件</string>
    <string name="disk_uninstalled_title">软件卸载</string>

    <string name="disk_cleanup_text">清理</string>

    <!-- Authority management -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_unknown_permission">未知权限</string>
    <string name="auth_permission_count_format"><![CDATA[<font color=\'#880000\'>%1$d</font>&nbsp;项危险权限]]></string>
    <string name="auth_empty_loading">正在加载</string>
    <string name="can_not_set_permission">不能设置权限</string>

    <!-- App管理 Zhou Jinpei -->
    <string name="app_downloaded">已下载</string>
    <string name="app_running">正在运行</string>
    <string name="app_all">全部</string>
    <string name="app_detail">应用详细</string>
    <string name="app_storage">存储</string>
    <string name="app_cache">缓存</string>
    <string name="app_total_size">全部</string>
    <string name="app_data_size">数据</string>
    <string name="app_application_size">应用</string>
    <string name="app_cache_size">缓存</string>
    <string name="app_detail_notification_visible">显示通知</string>
    <string name="app_detail_force_stop">强制停止</string>
    <string name="app_detail_uninstall">卸载</string>
    <string name="app_detail_clear_data">清理数据</string>
    <string name="app_detail_clear_cache">清理缓存</string>
    <string name="app_detail_failure_to_get_package_info">获取应用信息失败</string>
    <string name="app_notice">提示</string>
    <string name="app_have_not_been_root">没有获取到root权限</string>

    <!-- notification -->
    <string name="notification_item_icon">app icon</string>
    <string name="notification_prohibit_text">Operation is prohibited, just system app can do this!</string>
    <!-- Intercept management -->
    <string name="intercept_config_message">MESSAGE INTERCEPT</string>
    <string name="intercept_config_call">CALL INTERCEPT</string>
    <string name="title_activity_call_intercept_config">CallInterceptConfig</string>
    <string name="title_activity_message_intercept_config">MessageInterceptConfig</string>
    <string name="title_enable_intercept">Enable Intercept</string>
    <string name="title_call_intercept_strange">Strange Number</string>
    <string name="title_call_intercept_anonymous">Anonymous Number</string>
    <string name="title_call_intercept_contract">Contracts</string>
    <string name="title_message_intercept_strange">Strange Message</string>
    <string name="intercept">Intercept</string>
    <string name="un_intercept">No intercept</string>
    <string name="title_activity_app_list_for_one_permission">AppListForOnePermissionActivity</string>




</resources>
