<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/app_detail_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/app_detail_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/app_detail_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/app_detail_button_force_stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/app_detail_force_stop" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:visibility="invisible" />

            <Button
                android:id="@+id/app_detail_button_uninstall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/app_detail_uninstall" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/notification_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="4dip"
            android:text="@string/app_detail_notification_visible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="true"
                android:orientation="horizontal"
                android:paddingTop="-1dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:paddingTop="6dip"
                    android:text="@string/app_total_size"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageView
                    android:layout_width="0dip"
                    android:layout_height="1px"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="4dip"
                    android:layout_marginEnd="1dip"
                    android:layout_marginStart="1dip"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:scaleType="center"
                    android:src="@mipmap/dotted_line_480px" />

                <TextView
                    android:id="@+id/app_detail_total_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:paddingTop="6dip"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="true"
                android:orientation="horizontal"
                android:paddingTop="-1dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:paddingTop="6dip"
                    android:text="@string/app_application_size"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageView
                    android:layout_width="0dip"
                    android:layout_height="1px"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="4dip"
                    android:layout_marginEnd="1dip"
                    android:layout_marginStart="1dip"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:scaleType="center"
                    android:src="@mipmap/dotted_line_480px" />

                <TextView
                    android:id="@+id/app_detail_application_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:paddingTop="6dip"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="true"
                android:orientation="horizontal"
                android:paddingTop="-1dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:paddingTop="6dip"
                    android:text="@string/app_data_size"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageView
                    android:layout_width="0dip"
                    android:layout_height="1px"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="4dip"
                    android:layout_marginEnd="1dip"
                    android:layout_marginStart="1dip"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:scaleType="center"
                    android:src="@mipmap/dotted_line_480px" />

                <TextView
                    android:id="@+id/app_detail_data_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:paddingTop="6dip"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="true"
                android:orientation="horizontal"
                android:paddingTop="-1dip">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:paddingTop="6dip"
                    android:text="@string/app_cache_size"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <ImageView
                    android:layout_width="0dip"
                    android:layout_height="1px"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="4dip"
                    android:layout_marginEnd="1dip"
                    android:layout_marginStart="1dip"
                    android:layout_weight="1"
                    android:contentDescription="@null"
                    android:scaleType="center"
                    android:src="@mipmap/dotted_line_480px" />

                <TextView
                    android:id="@+id/app_detail_cache_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:paddingTop="6dip"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/app_detail_button_clear_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/app_detail_clear_data" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:visibility="invisible" />

            <Button
                android:id="@+id/app_detail_button_clear_cache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/app_detail_clear_cache" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
